<resources>
    <string name="app_name">S.Satta.MPD</string>
    <string name="location_fragment">Weather App - Campus Locations</string>
    <string name="three_days_weather">3-day Forecast</string>
    <string name="today">Today</string>
    <string name="select_ranges">Select updated ranges</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="updated_at">Updated at %s</string>
    <string name="temperature">Temperature</string>
    <string name="wind_direction">Wind Direction</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="visibility">Visibility</string>
    <string name="pressure">Pressure</string>
    <string name="humudity">Humudity</string>
    <string name="uv_risk">UV Risk</string>
    <string name="pollution">Pollution</string>
    <string name="sunset">Sunset</string>
</resources>