<?xml version="1.0" encoding="utf-8"?>

<!--////////////////////////////////////////////////////////////////////////////////
    // Name                 Saif Sattar
    // Student ID           S1313176
    ////////////////////////////////////////////////////////////////////////////////-->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/select_ranges"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.crystal.crystalrangeseekbar.widgets.CrystalRangeSeekbar
                android:id="@+id/seekBar_ranges"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="50dp"
                app:bar_color="#8990C4"
                app:bar_highlight_color="#2434AD"
                app:data_type="_integer"
                app:left_thumb_color="#1A246D"
                app:left_thumb_color_pressed="#030B47"
                app:max_value="23"
                app:min_value="0"
                app:right_thumb_color="#1A246D"
                app:right_thumb_color_pressed="#030B47" />

            <TextView
                android:id="@+id/tv_min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/seekBar_ranges"
                android:layout_alignStart="@id/seekBar_ranges"
                android:text="0" />

            <TextView
                android:id="@+id/tv_max"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/seekBar_ranges"
                android:layout_alignEnd="@id/seekBar_ranges"
                android:text="23" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save" />
        </LinearLayout>
    </LinearLayout>
</layout>